# opauque-stellar

./: CHANGELOG.md  README.md  SECURITY.md  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
artifacts/: manifest.json
circuits/: constraint-thresholds.json
circuits/fixtures/: nullifier-cross-test.json
contracts/attestation-engine-v2/: Cargo.toml
contracts/attestation-engine-v2/src/: lib.rs
contracts/groth16-verifier/: Cargo.toml
contracts/groth16-verifier/src/: lib.rs
contracts/reputation-verifier/src/: lib.rs
contracts/schema-registry/: Cargo.toml
contracts/schema-registry/src/: lib.rs
contracts/stealth-announcer/: Cargo.toml
contracts/stealth-announcer/src/: lib.rs
deployments/: README.md
deployments/security/: mainnet-audit-findings.json
deployments/v1/: mainnet.json  testnet.json
docs/: AUTHORIZATION_MATRIX.md  FORMAL_VERIFICATION_SCOPING.md  reputation-ux-guide.md
docs/integrators/: reputation-proof-guide.md
frontend/: package-lock.json  package.json
frontend/src/components/: AbusePolicyPage.tsx  AdminPanel.tsx  FeatureDisabledNotice.tsx  GhostAnnounceModal.tsx  LandingPage.tsx  LandingView.tsx  ManageView.tsx  MyTraitsView.tsx  PayPage.tsx  PaySuccessPage.tsx  ProofGeneratorModal.tsx  ProveTraitModal.tsx  ReceiveView.tsx  RegistrationWizard.tsx  SchemaStudio.tsx  SendView.tsx  SwitchNetworkModal.tsx  TestnetBanner.tsx
frontend/src/context/: StellarWalletProviders.tsx
scripts/: check-circuit-constraints.ts  export-contract-config.ts  prepare-frontend-artifacts.ts
(+29 files in other folders)
