[package]
name = "attestation-engine-v2"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
opaque-schema-core = { path = "../opaque-schema-core", default-features = false }
schema-registry = { path = "../schema-registry" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
schema-registry = { path = "../schema-registry" }
